grafana/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: grafana
    component: k8s-testing
  name: grafana
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
      component: k8s-testing
  template:
    metadata:
      labels:
        app: grafana
        component: k8s-testing
    spec:
      containers:
      - env:
        - name: GF_SECURITY_ADMIN_USER
          value: admin
        - name: GF_SECURITY_ADMIN_PASSWORD
          value: admin
        image: grafana/grafana:4.6.3
        imagePullPolicy: IfNotPresent
        name: grafana
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /login
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 30
        volumeMounts:
        - mountPath: /var/lib/grafana/data
          name: storage-volume
      volumes:
      - name: storage-volume
        emptyDir: {}
      nodeSelector:
        kubernetes.io/hostname: poc-master1
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
