grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
    component: k8s-testing
  name: grafana
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
    component: k8s-testing
  type: ClusterIP
